--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,28 @@
-node_modules
-.next
-npm-debug.log
-yarn-error.log
-dist
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Next.js build output
+.next/
+out/
+build/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Environment variables
 .env
 .env.local
-.env.*.local
-*.log
-*.zip
+.env.production
+.env.development
+
+# OS / Editor
+.DS_Store
+*.swp
+.vscode/
+.idea/
+
