Add octokit dependency

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "16.0.4",
+    "octokit": "^5.0.5",
     "openai": "^6.9.1",
     "pm2": "^6.0.13",
     "react": "19.2.0",
