--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@upstash/redis": "^1.35.7",
     "@vercel/kv": "^3.0.0",
     "next": "16.0.4",
     "octokit": "^5.0.5",
