--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@upstash/redis": "^1.35.7",
     "@vercel/kv": "^3.0.0",
+    "discord.js": "^14.25.1",
+    "dotenv": "^17.2.3",
     "mysql2": "^3.15.3",
     "next": "16.0.4",
     "octokit": "^5.0.5",
